@@ -1,9 +1,9 @@
 # lingtypology
 
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-[![Build Status](https://travis-ci.org/agricolamz/lingtypology.svg?branch=master)](https://travis-ci.org/agricolamz/lingtypology)
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/agricolamz/lingtypology?branch=master&svg=true)](https://ci.appveyor.com/project/agricolamz/lingtypology)
-[![Coverage Status](https://img.shields.io/codecov/c/github/agricolamz/lingtypology/master.svg)](https://codecov.io/github/agricolamz/lingtypology?branch=master)
+[![Build Status](https://travis-ci.org/ropensci/lingtypology.svg?branch=master)](https://travis-ci.org/ropensci/lingtypology)
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/ih3r5ubdndb34iap?svg=true)](https://ci.appveyor.com/project/agricolamz/lingtypology-p2nmi)
+[![Coverage Status](https://img.shields.io/codecov/c/github/ropensci/lingtypology/master.svg)](https://codecov.io/github/ropensci/lingtypology?branch=master)
 [![CRAN
 version](http://www.r-pkg.org/badges/version/lingtypology)](https://cran.r-project.org/package=lingtypology)
 [![](http://cranlogs.r-pkg.org/badges/grand-total/lingtypology)](https://CRAN.R-project.org/package=lingtypology)
@@ -20,7 +20,7 @@ install.packages("lingtypology")
 … or get the development version from GitHub:
 ```R
 install.packages("devtools")
-devtools::install_github("agricolamz/lingtypology")
+devtools::install_github("ropensci/lingtypology")
 ```
 
 Sometimes installation failed because of the absence of the package `crosstalk`. Just install it using command `install.packages("crosstalk")`.
@@ -30,7 +30,7 @@ Load a library:
 library(lingtypology)
 ```
 
-For a detailed tutorial see [GitHub pages](https://agricolamz.github.io/lingtypology/).
+For a detailed tutorial see [GitHub pages](https://agricolamz.github.io/lingtypology/) or package vign.
 
 You can contribute to `lingtypology` by
 
